--- a/자바개념.md
+++ b/자바개념.md
@@ -1,5 +1,8 @@
 # 자바(JAVA)란 무엇인가?
 
+<center><img src="https://w.namu.la/s/95f3898eb4996f6ba5a3930b212b295da56e062e9427da87331a510d3d868bd81f24d10d242ca0d93f4ad94053b9321549cb4590ea815a8d39ba92cde1a7da448ca8374b4e2f19da10890710da671e86cbdaa5d34dba8318572b05935ee1979b" width="300" height="300"></center>
+
+
 ### JAVA HISTORY~
 
 - **1995년** 최초 발표된 언어
@@ -20,5 +23,5 @@
 - **오라클**이 관리
 
     2009년 4월 20일 제작사인 썬 마이크로시스템즈가 오라클과 인수 합병됨에 따라 자바에 대한 권리 및 유지보수 또한 오라클로 넘어가게 되었다.
-     
+
     Java 개발, 관리, 배포 주관
