--- a/람다(Lambda)  복습/람다식 구현해보기.md
+++ b/람다(Lambda)  복습/람다식 구현해보기.md
@@ -44,27 +44,7 @@ interface Ground {
 }
 ```java
 
-```java
-package 람다복습01;
 
-import java.util.stream.Stream;
+**람다식(Lambda Expressions)** : 익명 함수(anonymous function)을 생성하는 식, 자바 8부터 사용 
 
-public class LambdaStringArr01 {
-	
-	public static void main(String[] args) {
-		
-	
-	String[] strArr = { "안녕히", "bb", "c", "반가워요" };
-	Stream<String> strSt = Stream.of(strArr);
-	//특정 객체를 요소로 갖는 Stream을 생성하고 싶을 때 stream.of를 사용
-	
-	int intgerSum = strSt.mapToInt(String::length).sum();
-	// mapToiInt을 이용해 기본스트림을 Int타입 스트림으로 변환해준다.
-	System.out.println("sum = " + intgerSum);
-	//출력시 배열에 들어있는 문자에 개수가 총 계산되어 출력된다.
-	//'안', '녕', '히', 'b', 'b', 'c', '반', '가', '워', '요' 총 10개
 
-	}
-
-}
-```java
